--- a/ui/layout.html
+++ b/ui/layout.html
@@ -4,127 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>necoGraph</title>
+    <title>neoGraph</title>
     <style>
-        :root {
-            --ratio: 1.25;
-            --step-0: 1rem;
-            --step-1: calc(var(--step-0) * var(--ratio));
-            --step-2: calc(var(--step-1) * var(--ratio));
-            --step-3: calc(var(--step-2) * var(--ratio));
-            --step-4: calc(var(--step-3) * var(--ratio));
-            --step-5: calc(var(--step-4) * var(--ratio));
-            --step-6: calc(var(--step-5) * var(--ratio));
-            --step-7: calc(var(--step-6) * var(--ratio));
-            --step-8: calc(var(--step-7) * var(--ratio));
-            --step-9: calc(var(--step-8) * var(--ratio));
-            --step-10: calc(var(--step-9) * var(--ratio));
-            --step-11: calc(var(--step-10) * var(--ratio));
-            --step-12: calc(var(--step-11) * var(--ratio));
-            --step-13: calc(var(--step-12) * var(--ratio));
-            --step-14: calc(var(--step-13) * var(--ratio));
-            --step-15: calc(var(--step-14) * var(--ratio));
-            --step--1: calc(var(--step-0) / var(--ratio));
-            --step--2: calc(var(--step--1) / var(--ratio));
-            --step--3: calc(var(--step--2) / var(--ratio));
-            --step--4: calc(var(--step--3) / var(--ratio));
-        }
-
-        *, *::before, *::after { box-sizing: border-box }
-        html, body {overflow: hidden}
-        * { margin: 0 }
-
-        body {
-            font-family: sans-serif;
-            font-size: 16px;
-            box-sizing: border-box;
-        }
-
-        #container {
-            display: flex;
-            width: 400vw;
-            transition: transform 0.6s ease;
-            background: #20202b;
-        }
-        
-        .view {
-            width: 100vw;
-            height: 100vh;
-            padding: 0 var(--step-0); ;
-        }
-
-        .network {}
-        .main {}
-        .config {}
-        .settings {}
-
-        nav {
-            height: var(--step-6); ;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: #20202b;
-            color: #BFCDE7;
-            padding-right: var(--step-14);
-        }
-
-        nav > h1 {
-            opacity: 0%;
-            transition: opacity 0.8s linear;
-        }
-
-        #breadcrumb {
-            position: fixed;
-            display: flex;
-            flex-direction: row;
-            height: var(--step-6) ;
-            z-index: 10;
-            padding: var(--step--3) 0;
-            margin: 0 var(--step--3);
-            right:0;
-        }
-
-        #breadcrumb > svg {
-            cursor: pointer;
-        }
-
-        #bcselect {
-            position: absolute;
-            border-bottom: 3px solid #BFCDE7;
-            width: 14.286%;
-            height: 100%;
-            left: 0%;
-            top: 0%;
-            transition: left 0.6s ease;
-        }
-
-        #bcselect.command {left:28.571%}
-        #bcselect.graph {left:57.143%}
-        #bcselect.settings {left:85.714%}
-
-        #container.command {transform: translateX(-100vw)}
-        #container.graph{transform: translateX(-200vw)}
-        #container.settings {transform: translateX(-300vw)}
-
-        #container.network > .network h1 {opacity: 100%}
-        #container.command > .command h1 {opacity: 100%}
-        #container.graph > .graph h1 {opacity: 100%}
-        #container.settings > .settings h1 {opacity: 100%}
-
-        @media (max-width: 768px) {
-            #breadcrumb {
-                height: var(--step-5) ;
-                padding: var(--step--2) 0;
-                margin: 0 var(--step--2);
-            }
-            nav {
-                height: var(--step-5); ;
-                padding-right: var(--step-12);
-            }
-            h1 {
-                font-size: 22px;
-            }
-        }
+        /*{{layout-css}}*/
     </style>
 </head>
 
@@ -183,17 +65,16 @@
                 <h1>Network</h1>
             </nav>
             <div class="content">
+                {{network-html}}
             </div>
         </div>
 
         <div class="view command">
             <nav>
                 <h1>Command</h1>
-                <div class="pagenav">
-                    <div class="couple"></div>
-                </div>
             </nav>
             <div class="content">
+                {{command-html}}
             </div>
         </div>
         
@@ -215,25 +96,7 @@
     </div>
 
     <script>
-        const container = document.getElementById('container');
-        const bcSelect = document.getElementById('bcselect');
-        function toNetwork() {
-            container.className = "network";
-            bcSelect.className = "network";
-        };
-        function toCommand() {
-            container.className = "command";
-            bcSelect.className = "command";
-        }
-        function toGraph() {
-            container.className = "graph";
-            bcSelect.className = "graph";
-        }
-        function toSettings() {
-            container.className = "settings";
-            bcSelect.className = "settings";
-        }
+        // {{layout-js}}
     </script>
-
 </body>
 </html>
