--- a/ui/layout.html
+++ b/ui/layout.html
@@ -83,6 +83,7 @@
                 <h1>Graph</h1>
             </nav>
             <div class="content">
+                {{graph-html}}
             </div>
         </div>
         
