Add edge support

--- a/ui/content/graph.html
+++ b/ui/content/graph.html
@@ -14,7 +14,7 @@
     <svg id="svg" class="svg-canvas" viewBox="-400 -300 1600 900" xmlns="http://www.w3.org/2000/svg">
         <defs>
             <!-- Symbols for elements -->
-             <g id="sym-connector">
+             <g id="sym-wire">
                 <path d="M 10 10 H 90 V 90 H 10 Z" fill="transparent" stroke="#BFCDE7" stroke-width="1.5"/>
             </g>
 
